Emmie: library renovation
